# gordon-rs

./: .env  Cargo.toml  docker-compose.yml  gordon-rs.session.sql  setup_test_db.sql
migrations/: 1_setup-transactional-outbox.sql  setup_test_db.sql
src/: db.rs  lib.rs  main.rs  outbox.rs  publisher.rs  rdk_publisher.rs
