[package]
name = "gordon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
kafka = "0.9.0"
config = "0.13.2"
once_cell = "1.16.0"
chrono = { version = "0.4.23", features = ["serde"] }
anyhow = "1.0.66"
parking_lot = "0.12.1"
